@@ -1347,7 +1347,7 @@ and <xref linkend="SetFontTTF" /> after using SetDefaultTTFont.
   <refsect1>
     <title>History</title>
     <para>
-Starting after PHPlot-5.1.2, TrueType fonts are validated using GD.
+Starting with PHPlot-5.1.3, TrueType fonts are validated using GD.
 This allows GD to apply its own rules to try to locate a font file. On at
 least some platforms, this allows fonts to be specified by filename only,
 without having to set the PHPlot default font directory.
@@ -2171,7 +2171,7 @@ On a 72 pixels per inch display, the text size will be 18 points, but at
   <refsect1>
     <title>History</title>
     <para>
-Starting after PHPlot-5.1.2, TrueType fonts are validated by trying to
+Starting with PHPlot-5.1.3, TrueType fonts are validated by trying to
 use the font with a non-drawing operation, rather than by seeing if the
 font file exists.
 See <xref linkend="conc-text-fonts"/> for more information.
@@ -2395,7 +2395,7 @@ specify the font of an element using the specific type of font.
   <refsect1>
     <title>History</title>
     <para>
-Starting after PHPlot-5.1.2, TrueType fonts are validated by trying to
+Starting with PHPlot-5.1.3, TrueType fonts are validated by trying to
 use the font with a non-drawing operation, rather than by seeing if the
 font file exists.
 See <xref linkend="conc-text-fonts"/> for more information.
@@ -5145,7 +5145,7 @@ See <xref linkend="conc-text-fonts"/> for more information.
     <title>History</title>
     <para>
 Use of the default TrueType font directory to locate the initial, default
-font was implemented after PHPlot-5.1.2.
+font was implemented in PHPlot-5.1.3.
 Also with this release, fonts are first searched for without a path, which
 allows GD to try to locate the font using its internal rules.
     </para>
@@ -5480,7 +5480,7 @@ As a result, you had to use <xref linkend="SetDefaultTTFont"/> to set a
 valid default font before enabling TrueType fonts with SetUseTTF().
 But since SetDefaultTTFont() itself turned on TrueType fonts, SetUseTTF() was
 rarely useful.
-Starting after PHPlot-5.1.2, PHPlot will try a number of sans-serif font
+Starting with PHPlot-5.1.3, PHPlot will try a number of sans-serif font
 names, trying to find a valid font to use as the default. On platforms
 where this works, SetUseTTF(True) can be used without any other font setup
 in order to use the default TrueType font for all text.
